Changed LSystem slightly

--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
                     lsys.iterate();
                 }
 
-                var tree = lsys.getTree();
-
                 var renl = new RenderL({
-                    tree: tree,
+                    tree: lsys.tree,
                     context: context
                 });
 
