Simplified render setup

--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
                 }
 
                 var plantRenderer = new RenderL({
-                    tree: plant.tree,
+                    system: plant,
                     canvas: canvas,
                     angle: 25
                 });
 
                 var dragonRenderer = new RenderL({
-                    tree: dragonCurve.tree,
+                    system: dragonCurve,
                     canvas: canvas,
                     angle: 90
                 });
 
                 var kockRenderer = new RenderL({
-                    tree: kochCurve.tree,
+                    system: kochCurve,
                     canvas: canvas,
                     angle: 90
                 });
 
                 var sierpinskiRenderer = new RenderL({
-                    tree: sierpinskiTriangle.tree,
+                    system: sierpinskiTriangle,
                     canvas: canvas,
                     angle: 60
                 });
