Now actually possible to add the constants for drawing

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
                     angle: 60
                 });
 
+                sierpinskiRenderer.addConstants(['A','B']);
+
                 plantRenderer.render();
                 dragonRenderer.render();
                 kockRenderer.render();
