--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     },
                     canvas: canvas,
                     angle: 25,
+                    initialAngle: 270,
                     width: 512,
                     height: 512,
                     x: 0,
